[project]
name = "valmistujo"
version = "0.1.0"
description = ""
authors = [
    {name = "Eelis Loikkanen",email = "eelis.loikkanen@helsinki.fi"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "invoke (>=2.2.1,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false